--- a/assets/sass/base/_common.scss
+++ b/assets/sass/base/_common.scss
@@ -36,7 +36,6 @@ html {
   max-width: 164rem;
   margin: 0 auto;
   padding: 0 2.4rem;
-  overflow: hidden;
 }
 
 .bg-1 {
