--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -30,6 +30,10 @@ ol {
   list-style: none;
 }
 
+nav {
+  width: 100%;
+}
+
 strong {
   font-weight: 600;
 }
