--- a/assets/sass/layout/_navigation.scss
+++ b/assets/sass/layout/_navigation.scss
@@ -377,6 +377,7 @@
 .nav-tabs {
   display: flex;
   gap: 3rem;
+  overflow: hidden;
 
   &__link {
     &,
