--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -52,6 +52,10 @@
       font-size: 5rem;
       margin-bottom: 3rem;
     }
+
+    @include respond(600) {
+      font-size: 4rem;
+    }
   }
 
   &__desc {
@@ -66,6 +70,11 @@
     @include respond(600) {
       font-size: 2.4rem;
       margin-bottom: 5.2rem;
+    }
+
+    @include respond(600) {
+      font-size: 2.2rem;
+      margin-bottom: 4.4rem;
     }
   }
 
